# SmartPointerExercise

./: .gitmodules  CMakeLists.txt  README.md
include/: LoggerImpl.h  exercise1.h  exercise2.h
include/interface/: ILogger.h
src/: test1.cpp  test2.cpp
